zdtm: add new mnt_ext_sharing test for mount-v2
These test simply checks that sharing between two mounts in container:
1) external mount and 2) it's bind persists (case when bind has the same
mountpoint).

Note: on old mount engine mounts inside container become also shared
with mount in criu mount namespace (outside container) after c/r which
is not right.

Cherry-picked from Virtuozzo criu:
https://src.openvz.org/projects/OVZ/repos/criu/commits/76a09e850

Signed-off-by: Pavel Tikhomirov <ptikhomirov@virtuozzo.com>

--- a/test/zdtm/static/Makefile
+++ b/test/zdtm/static/Makefile
@@ -403,6 +403,7 @@ TST_DIR		=				\
 		mnt_ext_collision		\
 		mntns_pivot_root		\
 		mntns_pivot_root_ro		\
+		mnt_ext_sharing			\
 		mnt_tracefs			\
 		mntns_deleted			\
 		unlink_regular00		\
