--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,11 @@ env:
 jobs:
   include:
     - os: linux
+      arch: amd64
+      # sched_policy00 fails on 20.04 (focal) with "Operation not permitted"
+      env: TR_ARCH=local ZDTM_OPTS="-x zdtm/static/sched_policy00"
+      dist: focal
+    - os: linux
       arch: ppc64le
       env: TR_ARCH=local
       dist: bionic
