--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ jobs:
   include:
     - os: linux
       arch: amd64
-      # sched_policy00 fails on 20.04 (focal) with "Operation not permitted"
-      env: TR_ARCH=local ZDTM_OPTS="-x zdtm/static/sched_policy00"
+      env: TR_ARCH=local
       dist: focal
     - os: linux
       arch: ppc64le
