--- a/.github/workflows/docker-test.yml
+++ b/.github/workflows/docker-test.yml
@@ -12,3 +12,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Run Docker Test (${{ matrix.os }})
       run: sudo make -C scripts/ci docker-test
+
+  docker-build:
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run biuld inside docker container
+        run: sudo make docker-build
+      - name: Run tests inside docker container
+        run: sudo make docker-test
