zdtm: test buffer restore on TCP_CLOSE sockets
Signed-off-by: Radostin Stoyanov <radostin.stoyanov@eng.ox.ac.uk>

--- a/test/zdtm/static/Makefile
+++ b/test/zdtm/static/Makefile
@@ -108,6 +108,7 @@ TST_NOFILE	:=				\
 		socket-tcp-close0 		\
 		socket-tcp-close1 		\
 		socket-tcp-close2		\
+		socket-tcp-close3		\
 		socket-dump-tcp-close 		\
 		socket-tcp-unconn		\
 		socket-tcp6-unconn		\
