--- a/.github/workflows/cross-compile.yml
+++ b/.github/workflows/cross-compile.yml
@@ -8,7 +8,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        target: [armv7-stable-cross, aarch64-stable-cross, ppc64-stable-cross, mips64el-stable-cross]
+        target: [
+          armv7-stable-cross,
+          armv7-testing-cross,
+          aarch64-stable-cross,
+          aarch64-testing-cross,
+          ppc64-stable-cross,
+          ppc64-testing-cross,
+          mips64el-stable-cross,
+          mips64el-testing-cross
+        ]
 
     steps:
     - uses: actions/checkout@v2
