ci: use unstable release for cross-compile
We added cross-compile tests with testing debian release to be able to
replicate the error reported in #1653, however, installing build
dependencies in this release currently fails with the following error:

libc6-dev:armhf : Breaks: libc6-dev-armhf-cross (< 2.33~) but 2.32-1cross4 is to be installed

This is not something we can fix, therefore using the debian unstable
release (instead of testing) could be more reliable option for our CI.
This would still replicate the problem reported in #1653.

Signed-off-by: Radostin Stoyanov <rstoyanov@fedoraproject.org>

--- a/.github/workflows/cross-compile.yml
+++ b/.github/workflows/cross-compile.yml
@@ -10,13 +10,13 @@ jobs:
       matrix:
         target: [
           armv7-stable-cross,
-          armv7-testing-cross,
+          armv7-unstable-cross,
           aarch64-stable-cross,
-          aarch64-testing-cross,
+          aarch64-unstable-cross,
           ppc64-stable-cross,
-          ppc64-testing-cross,
+          ppc64-unstable-cross,
           mips64el-stable-cross,
-          mips64el-testing-cross
+          mips64el-unstable-cross
         ]
 
     steps:
