zdtm: add mntns_pivot_root test
This creates nested mntns and does pivot_root to tmpfs mount, so that
roots of original test mntns and in nested mntns are different.

Before allowing nested mntnses with different roots in previous patch
this would fail.

Signed-off-by: Pavel Tikhomirov <ptikhomirov@virtuozzo.com>

--- a/test/zdtm/static/Makefile
+++ b/test/zdtm/static/Makefile
@@ -401,6 +401,7 @@ TST_DIR		=				\
 		mnt_ext_dev			\
 		mnt_ext_root			\
 		mnt_ext_collision		\
+		mntns_pivot_root		\
 		mnt_tracefs			\
 		mntns_deleted			\
 		unlink_regular00		\
